feat: add get_board_content and get_all_boards
